# HyperHDR

./: .clang-tidy  .clang-tidy-fix  .clazy  .editorconfig  .gitignore  .gitmodules  3RD_PARTY_LICENSES  BUILDING.md  CHANGELOG.md  CHANGELOG_RAWHID_SOLVERAWARE_V3_2026-03-29.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_SIGNING_POLICY.md  CompileHowto.md  HyperhdrConfig.h.in  HyperionConfig.h.in  LICENSE  README.md  README_COLORSPACE_TRANSFER_REFERENCE.md  README_DISPLAY_CALIBRATION_PLAN.md  README_DV_RUNTIME_BACKUP_CHECKLIST.md  README_LUT_SWITCHING_NOTES.md  README_RAW_HID_16BIT_CHANGES.md  build.sh  lut switching improvements.md  version  version.txt
libsrc/cec/: CMakeLists.txt  cecHandler.cpp
libsrc/effectengine/: Animation4Music_PulseBlue.cpp  Animation4Music_PulseGreen.cpp  Animation4Music_PulseMulti.cpp  Animation4Music_PulseMultiFast.cpp  Animation4Music_PulseMultiSlow.cpp  Animation4Music_PulseRed.cpp  Animation4Music_PulseWhite.cpp  Animation4Music_PulseYellow.cpp  Animation4Music_QuatroBlue.cpp  Animation4Music_QuatroGreen.cpp  Animation4Music_QuatroMulti.cpp  Animation4Music_QuatroMultiFast.cpp  Animation4Music_QuatroMultiSlow.cpp  Animation4Music_QuatroRed.cpp  Animation4Music_QuatroWhite.cpp  Animation4Music_QuatroYellow.cpp  Animation4Music_StereoBlue.cpp  Animation4Music_StereoGreen.cpp  Animation4Music_StereoMulti.cpp  Animation4Music_StereoMultiFast.cpp  Animation4Music_StereoMultiSlow.cpp  Animation4Music_StereoRed.cpp  Animation4Music_StereoWhite.cpp  Animation4Music_StereoYellow.cpp  Animation4Music_TestEq.cpp  Animation4Music_WavesPulse.cpp  Animation4Music_WavesPulseFast.cpp  Animation4Music_WavesPulseSlow.cpp  AnimationBase.cpp  AnimationBaseMusic.cpp  Animation_AtomicSwirl.cpp  Animation_BlueMoodBlobs.cpp  Animation_Breath.cpp  Animation_Candle.cpp  Animation_CandleLight.cpp  Animation_CinemaBrightenLights.cpp  Animation_CinemaDimLights.cpp  Animation_ColdMoodBlobs.cpp  Animation_DoubleSwirl.cpp  Animation_Fade.cpp  (+25 more)
libsrc/grabber/: CMakeLists.txt
libsrc/hyperhdrbase/: AuthManager.cpp  CMakeLists.txt  CaptureCont.cpp  ComponentRegister.cpp  DetectionAutomatic.cpp  DetectionManual.cpp  Grabber.cpp  GrabberWrapper.cpp  HyperHdrIManager.cpp  HyperHdrInstance.cpp  ImageProcessor.cpp  ImageToLedsMap.cpp  LedString.cpp  LinearColorSmoothing.cpp  MessageForwarder.cpp  MultiColorAdjustment.cpp  PriorityMuxer.cpp  SettingsManager.cpp  SoundCapture.cpp  SystemControl.cpp  SystemWrapper.cpp  VideoControl.cpp  hyperhdr.schema.json  hyperion.schema.json  resource.qrc
libsrc/protoserver/: CMakeLists.txt  ProtoClientConnection.cpp  ProtoClientConnection.h  ProtoServer.cpp
libsrc/utils/: CMakeLists.txt  ColorSys.cpp  DefaultSignalHandler.cpp  FileUtils.cpp  ImageData.cpp  ImageResampler.cpp  Logger.cpp  NetOrigin.cpp  Process.cpp  Profiler.cpp  RgbChannelAdjustment.cpp  RgbTransform.cpp  SysInfo.cpp  VideoMemoryManager.cpp
sources/: CMakeLists.txt  precompiled_hyperhdr_headers.cpp
sources/api/: API.cpp  BaseAPI.cpp  CMakeLists.txt  CallbackAPI.cpp  HyperAPI.cpp  JSONRPC_schemas.qrc  JsonAPI.cpp  JsonCB.cpp
sources/base/: AccessManager.cpp  AuthManager.cpp  AutomaticToneMapping.cpp  BGEffectHandler.cpp  CMakeLists.txt  ColorCalibration.cpp  ComponentController.cpp  ComponentRegister.cpp  DetectionAutomatic.cpp  DetectionManual.cpp  Grabber.cpp  GrabberHelper.cpp  GrabberWrapper.cpp  HyperHdrIManager.cpp  HyperHdrInstance.cpp  HyperHdrManager.cpp  ImageColorAveraging.cpp  ImageProcessingUnit.cpp  ImageProcessor.cpp  ImageToLedManager.cpp  ImageToLedsMap.cpp  InstanceConfig.cpp  LedCalibration.cpp  LedString.cpp  LinearSmoothing.cpp  MessageForwarder.cpp  MultiColorAdjustment.cpp  Muxer.cpp  NetworkForwarder.cpp  PriorityMuxer.cpp  RawUdpServer.cpp  SettingsManager.cpp  Smoothing.cpp  SoundCapture.cpp  SoundCaptureResult.cpp  SystemControl.cpp  SystemWrapper.cpp  VideoControl.cpp  hyperhdr.schema.json  resource.qrc
sources/blackborder/: BlackBorderDetector.cpp  BlackBorderProcessor.cpp  CMakeLists.txt
sources/boblightserver/: BoblightClientConnection.cpp  BoblightClientConnection.h  BoblightServer.cpp  CMakeLists.txt
sources/bonjour/: BonjourServiceHelper.cpp  BonjourServiceRegister.cpp  CMakeLists.txt  DiscoveryRecord.cpp  DiscoveryWrapper.cpp  bonjourbrowserwrapper.cpp  bonjourservicebrowser.cpp  bonjourservicehelper.cpp  bonjourserviceregister.cpp  bonjourserviceresolver.cpp
sources/cec/: CMakeLists.txt  WrapperCEC.cpp  cecHandler.cpp
sources/commandline/: BooleanOption.cpp  CMakeLists.txt  ColorOption.cpp  ColorsOption.cpp  DoubleOption.cpp  ImageOption.cpp  IntOption.cpp  Option.cpp  Parser.cpp  RegularExpressionOption.cpp  ValidatorOption.cpp
sources/db/: AuthTable.cpp  CMakeLists.txt  DBManager.cpp  InstanceTable.cpp  MetaTable.cpp  SQLite.cpp  SettingsTable.cpp
sources/effectengine/: Animation4Music_PulseBlue.cpp  Animation4Music_PulseGreen.cpp  Animation4Music_PulseMulti.cpp  Animation4Music_PulseMultiFast.cpp  Animation4Music_PulseMultiSlow.cpp  Animation4Music_PulseRed.cpp  Animation4Music_PulseWhite.cpp  Animation4Music_PulseYellow.cpp  Animation4Music_QuatroBlue.cpp  Animation4Music_QuatroGreen.cpp  Animation4Music_QuatroMulti.cpp  Animation4Music_QuatroMultiFast.cpp  Animation4Music_QuatroMultiSlow.cpp  Animation4Music_QuatroRed.cpp  Animation4Music_QuatroWhite.cpp  Animation4Music_QuatroYellow.cpp  Animation4Music_StereoBlue.cpp  Animation4Music_StereoGreen.cpp  Animation4Music_StereoMulti.cpp  Animation4Music_StereoMultiFast.cpp  Animation4Music_StereoMultiSlow.cpp  Animation4Music_StereoRed.cpp  Animation4Music_StereoWhite.cpp  Animation4Music_StereoYellow.cpp  Animation4Music_TestEq.cpp  Animation4Music_WavesPulse.cpp  Animation4Music_WavesPulseFast.cpp  Animation4Music_WavesPulseSlow.cpp  AnimationBase.cpp  AnimationBaseMusic.cpp  Animation_AtomicSwirl.cpp  Animation_BlueMoodBlobs.cpp  Animation_Breath.cpp  Animation_Candle.cpp  Animation_CandleLight.cpp  Animation_CinemaBrightenLights.cpp  Animation_CinemaDimLights.cpp  Animation_ColdMoodBlobs.cpp  Animation_DoubleSwirl.cpp  Animation_Fade.cpp  (+27 more)
sources/effects/: AnimationBase.cpp  (+65 more)
(+1542 files in other folders)
